update compile emacs27 and disable doom-theme treemacs config.